--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
           Hello I’m Wildan Daffa
         </p>
       </div>
+      <div class="w-14 inline-flex gap-5">
+        <img src="img/ig.png" alt="">
+        <img src="img/fb.png" alt="">
+        <img src="img/gh.png" alt="">
+    </div>
     </div>
 
     <div class="ml-28">
@@ -48,6 +53,121 @@
       </div>
     </div>
   </div>
+
+  <!-- content 2 -->
+
+  <!-- Education -->
+  <div class="w-full bg-[#D9D9D9] py-16 mt-4">
+    <div class="max-w-screen-xl mx-auto flex justify-between w-full items-center gap-10">
+        <div class="flex flex-col gap-14 w-1/2 items-start ml-24">
+            <h1 class="text-4xl font-semibold">Education</h1>
+            <div class="flex flex-col gap-2">
+                <div class="inline-flex gap-3">
+                    <img class="w-16" src="img/award.png" alt="">
+                    <div class="flex flex-col gap-1">
+                        <h1 class="font-medium text-[22px]">SDN 1 Mojopanggung</h1>
+                        <p class="text-gray-500">2013 - 2019</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex flex-col gap-2">
+                <div class="inline-flex gap-3">
+                    <img class="w-16" src="img/award.png" alt="">
+                    <div class="flex flex-col gap-1">
+                        <h1 class="font-medium text-[22px]">SMPN 1 Giri </h1>
+                        <p class="text-gray-500">2019  - 2022</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex flex-col gap-2">
+                <div class="inline-flex gap-3">
+                    <img class="w-16" src="img/award.png" alt="">
+                    <div class="flex flex-col gap-1">
+                        <h1 class="font-medium text-[22px]">SMKN 1 Banyuwangi</h1>
+                        <p class="text-gray-500">2022 - Present</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Award -->
+        <div class="flex flex-col gap-14 w-1/2 items-start ml-14">
+            <h1 class="text-4xl font-semibold">Awards</h1>
+            <div class="flex flex-col gap-2">
+                <div class="inline-flex gap-3">
+                    <img class="w-16" src="img/award.png" alt="">
+                    <div class="flex flex-col gap-1">
+                        <h1 class="font-medium text-[22px]">Winner Programming Competition in USA</h1>
+                        <p class="text-gray-500">2020</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex flex-col gap-2">
+                <div class="inline-flex gap-3">
+                    <img class="w-16" src="img/award.png" alt="">
+                    <div class="flex flex-col gap-1">
+                        <h1 class="font-medium text-[22px]">Winner Programming Competition in Germay</h1>
+                        <p class="text-gray-500">2021</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex flex-col gap-2">
+                <div class="inline-flex gap-3">
+                    <img class="w-16" src="img/award.png" alt="">
+                    <div class="flex flex-col gap-1">
+                        <h1 class="font-medium text-[22px]">Winner Programming Competition in England</h1>
+                        <p class="text-gray-500">2022</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+
+  <!-- content 3 -->
+  <div class="w-full bg-[#D9D9D9] mx-auto flex justify-center flex-col gap-10 items-center py-16 mt-28 px-8">
+    <h1 class="text-4xl font-semibold text-center">The Best Portfolio From My Works</h1>
+    <div class="w-full max-w-screen-lg mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-16">
+        <div class="flex flex-col gap-5 items-center">
+            <img src="img/dw1.png" alt="" class="hover:scale-110 transition-all duration-200 w-full lg:w-[99%]">
+            <h1 class="text-xl font-semibold text-center">Design Personal website</h1>
+        </div>
+        <div class="flex flex-col gap-5 items-center">
+            <img src="img/dw2.png" alt="" class="hover:scale-110 transition-all duration-200 w-full lg:w-[99%]">
+            <h1 class="text-xl font-semibold text-center">Design Personal website</h1>
+        </div>
+        <div class="flex flex-col gap-5 items-center">
+            <img src="img/dw3.png" alt="" class="hover:scale-110 transition-all duration-200 w-full lg:w-[99%]">
+            <h1 class="text-xl font-semibold text-center">Design Personal website</h1>
+        </div>
+        <div class="flex flex-col gap-5 items-center">
+            <img src="img/dw4.png" alt="" class="hover:scale-110 transition-all duration-200 w-full lg:w-[99%]">
+            <h1 class="text-xl font-semibold text-center">Design Personal website</h1>
+        </div>
+        <div class="flex flex-col gap-5 items-center">
+            <img src="img/dw5.png" alt="" class="hover:scale-110 transition-all duration-200 w-full lg:w-[99%]">
+            <h1 class="text-xl font-semibold text-center">Design Personal website</h1>
+        </div>
+        <div class="flex flex-col gap-5 items-center">
+            <img src="img/dw6.png" alt="" class="hover:scale-110 transition-all duration-200 w-full lg:w-[99%]">
+            <h1 class="text-xl font-semibold text-center">Design Personal website</h1>
+        </div>
+    </div>
+  </div>
+
+  <!-- footer -->
+  <div class="w-full max-w-screen-xl mx-auto flex justify-between items-center py-10">
+    <div class="w-1/2">
+        <h1 class="text-gray-500 text-xl">©Copyright 2024 - Wildan Daffa</h1>
+    </div>
+    <div class="w-10 flex items-center justify-end gap-5">
+        <img src="img/ig.png" alt="">
+        <img src="img/fb.png" alt="">
+        <img src="img/gh.png" alt="">
+    </div>
+  </div>
+
+
   
   
 </body>
